# base

./: Cargo.toml
src/: email.rs  lib.rs  main.rs  telemetry.rs
src/handlers/: health_check.rs
src/notifications/: email.rs
storage/emails/: 0220ebac-0380-49ca-8b05-bbdd703ab3e0.eml  16b1c5d7-dcf1-4dac-9290-72c886bf91f7.eml  30921e20-f7f3-4b68-aa5f-39a2311df754.eml  347c75c9-637f-4663-be1d-b65b97c4d594.eml  69c6be86-7304-4d03-bd3e-530e074ce434.eml
tests/: entry.rs
tests/handlers/: health_check.rs
