[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lettre = { version = "0.10.4", features = ["file-transport", "smtp-transport", "native-tls", "hostname", "builder"] }
tracing = "0.1.37"
uuid = "1.4.0"
