[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tracing"] }
axum-macros = "0.3.7"
lettre = { version = "0.10.4", features = ["file-transport", "smtp-transport", "native-tls", "hostname", "builder"] }
reqwest = "0.11.18"
thiserror = "1.0.41"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "full"] }
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.0"

[[test]]
name = "entry"
path = "tests/entry.rs"
